2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (maybe-redirect-global-io): Don't consider
	connections without streams.
	(*new-connection-hook*): Don't add MAYBE-REDIRECT-GLOBAL-IO.
	(create-repl): Call MAYBE-REDIRECT-GLOBAL-IO here.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp ([method] source-locations (symbol)): Drop
	the unused _; the compiler dosn't like it.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp ([method] source-locations (symbol)): 

	* slime.el (slime-cd, slime-pwd): New commands.
	(slime-change-directory): New function.
	(slime-change-directory-hooks): New hook.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] find-definition.2): Also fails for Lispworks.
	([test] interrupt-at-toplevel, [test] interrupt-in-debugger): Those
	don't work well if there's no REPL thread.

	* swank-backend.lisp (wait-for-input, wait-for-one-stream): Don't
	use PEEK-CHAR because we can't interrupt that cleanly.
	* swank.lisp (simple-serve-requests): Run the REPL inside
	WITH-CONNECTION.
	* swank-lispworks.lisp (emacs-connected): Don't install the signal
	handler here ...
	(install-sigint-handler): ... use this instead

2008-12-30  Tobias C. Rittweiler  <tcr@freebits.de>

	As of now, `C-u C-c C-c' compiled a function with maximum debug
	settings (SBCL only.)

	Now, `M-- C-c C-c' will compile a function with maximum _speed_
	settings (still SBCL only) --- useful to elicit compiler notes.

	* slime.el (slime-compilation-debug-level): Renamed to
	`slime-compilation-policy'.
	(slime-normalize-optimization-level): Renamed to
	`slime-compute-policy'.

	* swank.lisp (compile-string-for-emacs): Takes a policy now.
	(compile-multiple-strings-for-emacs): Ditto.

	* swank-backend.lisp (swank-compile-string): Change :DEBUG key arg
	to :POLICY.

	* swank-scl.lisp, swank-openmcl.lisp, swank-lispworks.lisp
	* swank-ecl.lisp, swank-corman.lisp, swank-cmucl.lisp,